fix contrast and more fig labels

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -284,8 +284,8 @@ header a:hover {
 }
 .membership-option-2 a {
     text-decoration: none;
-    color: white;
-    background: #03a3df;
+    color: #444444;
+    background: #03a3df80;
     padding: .5rem;
 }
 .membership-option-2 a:hover {
